--- a/test/fixtures/cultivable_zone_memberships.yml
+++ b/test/fixtures/cultivable_zone_memberships.yml
@@ -32,15 +32,16 @@
 #  updated_at   :datetime         not null
 #  updater_id   :integer
 #
+#
+# == Fixture: cultivable_zone_memberships
+#
+# cultivable_zone_memberships_001:
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   group_id: 1
+#   id: 1
+#   member_id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
 
-
-class CultivableZoneMembership < Ekylibre::Record::Base
-  belongs_to :group, class_name: "CultivableZone"
-  belongs_to :member, class_name: "LandParcel"
-  #[VALIDATORS[ Do not edit these lines directly. Use `rake clean:validations`.
-  validates_numericality_of :population, allow_nil: true
-  validates_presence_of :group, :member
-  #]VALIDATORS]
-
-
-end
