--- a/config/rights.yml
+++ b/config/rights.yml
@@ -58,6 +58,7 @@
 # - "backend/animal_medicines#list_indicators"
 # - "backend/animal_medicines#list_intervention_casts"
 # - "backend/animal_medicines#list_markers"
+# - "backend/animal_medicines#list_measurements"
 # - "backend/animal_medicines#list_members"
 # - "backend/animal_medicines#list_places"
 # - "backend/animal_medicines#new"
@@ -79,6 +80,7 @@
 # - "backend/animals#list_indicators"
 # - "backend/animals#list_intervention_casts"
 # - "backend/animals#list_markers"
+# - "backend/animals#list_measurements"
 # - "backend/animals#list_members"
 # - "backend/animals#list_places"
 # - "backend/animals#new"
@@ -102,6 +104,7 @@
 # - "backend/building_divisions#list_indicators"
 # - "backend/building_divisions#list_intervention_casts"
 # - "backend/building_divisions#list_markers"
+# - "backend/building_divisions#list_measurements"
 # - "backend/building_divisions#list_members"
 # - "backend/building_divisions#list_places"
 # - "backend/building_divisions#new"
@@ -118,6 +121,7 @@
 # - "backend/buildings#list_indicators"
 # - "backend/buildings#list_intervention_casts"
 # - "backend/buildings#list_markers"
+# - "backend/buildings#list_measurements"
 # - "backend/buildings#list_members"
 # - "backend/buildings#list_places"
 # - "backend/buildings#picture"
@@ -184,6 +188,7 @@
 # - "backend/cultivable_zones#list_indicators"
 # - "backend/cultivable_zones#list_intervention_casts"
 # - "backend/cultivable_zones#list_markers"
+# - "backend/cultivable_zones#list_measurements"
 # - "backend/cultivable_zones#list_members"
 # - "backend/cultivable_zones#list_places"
 # - "backend/cultivable_zones#list_productions"
@@ -221,6 +226,7 @@
 # - "backend/equipments#list_indicators"
 # - "backend/equipments#list_intervention_casts"
 # - "backend/equipments#list_markers"
+# - "backend/equipments#list_measurements"
 # - "backend/equipments#list_members"
 # - "backend/equipments#list_places"
 # - "backend/equipments#picture"
@@ -305,6 +311,7 @@
 # - "backend/land_parcel_clusters#list_indicators"
 # - "backend/land_parcel_clusters#list_intervention_casts"
 # - "backend/land_parcel_clusters#list_markers"
+# - "backend/land_parcel_clusters#list_measurements"
 # - "backend/land_parcel_clusters#list_members"
 # - "backend/land_parcel_clusters#list_places"
 # - "backend/land_parcel_clusters#new"
@@ -325,6 +332,7 @@
 # - "backend/land_parcel_groups#list_indicators"
 # - "backend/land_parcel_groups#list_intervention_casts"
 # - "backend/land_parcel_groups#list_markers"
+# - "backend/land_parcel_groups#list_measurements"
 # - "backend/land_parcel_groups#list_members"
 # - "backend/land_parcel_groups#list_places"
 # - "backend/land_parcel_groups#new"
@@ -340,6 +348,7 @@
 # - "backend/land_parcels#list_indicators"
 # - "backend/land_parcels#list_intervention_casts"
 # - "backend/land_parcels#list_markers"
+# - "backend/land_parcels#list_measurements"
 # - "backend/land_parcels#list_members"
 # - "backend/land_parcels#list_places"
 # - "backend/land_parcels#picture"
@@ -382,6 +391,7 @@
 # - "backend/matters#list_indicators"
 # - "backend/matters#list_intervention_casts"
 # - "backend/matters#list_markers"
+# - "backend/matters#list_measurements"
 # - "backend/matters#list_members"
 # - "backend/matters#list_places"
 # - "backend/matters#new"
@@ -402,6 +412,7 @@
 # - "backend/medicines#list_indicators"
 # - "backend/medicines#list_intervention_casts"
 # - "backend/medicines#list_markers"
+# - "backend/medicines#list_measurements"
 # - "backend/medicines#list_members"
 # - "backend/medicines#list_places"
 # - "backend/medicines#new"
@@ -422,6 +433,7 @@
 # - "backend/mineral_matters#list_indicators"
 # - "backend/mineral_matters#list_intervention_casts"
 # - "backend/mineral_matters#list_markers"
+# - "backend/mineral_matters#list_measurements"
 # - "backend/mineral_matters#list_members"
 # - "backend/mineral_matters#list_places"
 # - "backend/mineral_matters#new"
@@ -443,6 +455,7 @@
 # - "backend/organic_matters#list_indicators"
 # - "backend/organic_matters#list_intervention_casts"
 # - "backend/organic_matters#list_markers"
+# - "backend/organic_matters#list_measurements"
 # - "backend/organic_matters#list_members"
 # - "backend/organic_matters#list_places"
 # - "backend/organic_matters#new"
@@ -490,6 +503,7 @@
 # - "backend/plant_medicines#list_indicators"
 # - "backend/plant_medicines#list_intervention_casts"
 # - "backend/plant_medicines#list_markers"
+# - "backend/plant_medicines#list_measurements"
 # - "backend/plant_medicines#list_members"
 # - "backend/plant_medicines#list_places"
 # - "backend/plant_medicines#new"
@@ -510,6 +524,7 @@
 # - "backend/plants#list_indicators"
 # - "backend/plants#list_intervention_casts"
 # - "backend/plants#list_markers"
+# - "backend/plants#list_measurements"
 # - "backend/plants#list_members"
 # - "backend/plants#list_places"
 # - "backend/plants#new"
@@ -541,6 +556,7 @@
 # - "backend/product_groups#list_indicators"
 # - "backend/product_groups#list_intervention_casts"
 # - "backend/product_groups#list_markers"
+# - "backend/product_groups#list_measurements"
 # - "backend/product_groups#list_members"
 # - "backend/product_groups#list_places"
 # - "backend/product_groups#new"
@@ -631,6 +647,7 @@
 # - "backend/products#list_indicators"
 # - "backend/products#list_intervention_casts"
 # - "backend/products#list_markers"
+# - "backend/products#list_measurements"
 # - "backend/products#list_members"
 # - "backend/products#list_places"
 # - "backend/products#new"
@@ -659,6 +676,7 @@
 # - "backend/settlements#list_indicators"
 # - "backend/settlements#list_intervention_casts"
 # - "backend/settlements#list_markers"
+# - "backend/settlements#list_measurements"
 # - "backend/settlements#list_members"
 # - "backend/settlements#list_places"
 # - "backend/settlements#new"
@@ -687,6 +705,7 @@
 # - "backend/workers#list_indicators"
 # - "backend/workers#list_intervention_casts"
 # - "backend/workers#list_markers"
+# - "backend/workers#list_measurements"
 # - "backend/workers#list_members"
 # - "backend/workers#list_places"
 # - "backend/workers#new"
