--- a/test/fixtures/product_indicator_data.yml
+++ b/test/fixtures/product_indicator_data.yml
@@ -63,7 +63,7 @@ product_indicator_data_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
-  indicator_name: "net_weight"
+  indicator_name: "net_mass"
   indicator_datatype: "measure"
   measure_value_unit: "kilogram"
   measure_value_value: "250.00"
