--- a/test/fixtures/product_measurements.yml
+++ b/test/fixtures/product_measurements.yml
@@ -80,7 +80,7 @@ product_measurements_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
-  indicator_name: "net_weight"
+  indicator_name: "net_mass"
   indicator_datatype: "measure"
   measure_value_unit: kilogram
   measure_value_value: 81.5
