--- a/test/fixtures/custom_fields.yml
+++ b/test/fixtures/custom_fields.yml
@@ -76,7 +76,7 @@ custom_fields_002:
   customized_type: Entity
   id: 2
   name: "Useless field"
-  nature: "string"
+  nature: "text"
   required: false
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
