--- a/config/rights.yml
+++ b/config/rights.yml
@@ -169,6 +169,7 @@
 # - "backend/cells/last_products_cells#show"
 # - "backend/cells/map_cells#show"
 # - "backend/cells/map_cells#update"
+# - "backend/cells/meteo_cells#show"
 # - "backend/cells/placeholder_cells#show"
 # - "backend/cells/product_bar_cells#show"
 # - "backend/cells/purchases_bar_cells#show"
