--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ rvm:
   - 2.0.0
 before_install: test/ci/before_install
 before_script:  test/ci/before_script
-script: bundle exec rake test
+script: bundle exec rake test:lib test
