--- a/test/fixtures/production_support_markers.yml
+++ b/test/fixtures/production_support_markers.yml
@@ -68,6 +68,7 @@ production_support_markers_001:
   id: 1
   indicator_datatype: "decimal"
   indicator_name: "population"
+  started_at: 0001-01-01 00:00:00 +00:00
   support_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -81,6 +82,7 @@ production_support_markers_002:
   id: 2
   indicator_datatype: "decimal"
   indicator_name: "population"
+  started_at: 0001-01-01 00:00:00 +00:00
   support_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -94,6 +96,7 @@ production_support_markers_003:
   id: 3
   indicator_datatype: "decimal"
   indicator_name: "population"
+  started_at: 0001-01-01 00:00:00 +00:00
   support_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
