--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ rvm:
 before_install: test/ci/before_install
 before_script:  test/ci/before_script
 script: bundle exec rake test:lib test
+matrix:
+  allow_failures:
+    - rvm: 2.1.0
