Adds Dbus config and specifies display port for Travis/selenium

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ bundler_args: --without development doc
 rvm:
   - 1.9.3
   - 2.0.0
-before_install: test/ci/before_install
+before_install: 
+  - "export DISPLAY=:99.0"
+  - test/ci/before_install
 before_script:  test/ci/before_script
-script: bundle exec rake test:lib test
+script: "DISPLAY=:99.0 bundle exec rake test:lib test"
 matrix:
   allow_failures:
     - rvm: 2.1.0
