--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,17 @@ rvm:
   - 1.9.3
   - 2.0.0
 before_install: 
+  - gem uninstall ffi -a
+  - "export DISPLAY=:99.0"
   - test/ci/before_install
 before_script:  
   - test/ci/before_script
+  - sh -e /etc/init.d/xvfb start
 script:
-  - "export DISPLAY=:99.0"
-  - "bundle exec rake test:lib test"
+  - "firefox --version"
+  - "bundle exec ruby -e \"require 'ffi'; puts FFI\""
+  - "ruby -e \"require 'ffi'; puts FFI\""
+  - "DISPLAY=:99.0 bundle exec rake test"
 matrix:
   allow_failures:
     - rvm: 2.1.0
