--- a/test/fixtures/postal_zones.yml
+++ b/test/fixtures/postal_zones.yml
@@ -19,7 +19,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: areas
+# == Table: postal_zones
 #
 #  city         :string(255)
 #  city_name    :string(255)
@@ -31,40 +31,40 @@
 #  id           :integer          not null, primary key
 #  lock_version :integer          default(0), not null
 #  name         :string(255)      not null
-#  postcode     :string(255)      not null
+#  postal_code  :string(255)      not null
 #  updated_at   :datetime         not null
 #  updater_id   :integer
 #
 #
-# == Fixture: areas
+# == Fixture: postal_zones
 #
-# areas_001:
+# postal_zones_001:
 #   country: "Lorem ipsum"
 #   created_at: 2013-10-26 18:34:04 +02:00
 #   creator_id: 1
 #   id: 1
 #   name: "Lorem ipsum"
-#   postcode: "Lorem ipsum"
+#   postal_code: "Lorem ipsum"
 #   updated_at: 2013-10-26 18:34:04 +02:00
 #   updater_id: 1
 #
-areas_001:
+postal_zones_001:
   country: "us"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
   name: "3451-13231 LAS VEGAS"
-  postcode: "3451-13231"
+  postal_code: "3451-13231"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
-areas_002:
+postal_zones_002:
   country: "fr"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
   name: "33000 BORDEAUX"
-  postcode: "33000"
+  postal_code: "33000"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
