--- a/config/rights.yml
+++ b/config/rights.yml
@@ -1,4 +1,5 @@
 # Unused actions in rights
+# - "authentication/sessions#_callback_before_11"
 # - "backend/accounts#unroll"
 # - "backend/activities#create"
 # - "backend/activities#destroy"
@@ -728,7 +729,7 @@
 # - "devise/registrations#edit"
 # - "devise/registrations#new"
 # - "devise/registrations#update"
-# - "devise/sessions#_callback_before_12"
+# - "devise/sessions#_callback_before_11"
 # - "devise/sessions#create"
 # - "devise/sessions#destroy"
 # - "devise/sessions#new"
@@ -752,7 +753,7 @@ __minimum__:
 __public__:
 - "authentication/passwords#create"
 - "authentication/passwords#new"
-- "authentication/sessions#_callback_before_12"
+- "authentication/sessions#_callback_before_12" #?
 - "authentication/sessions#create"
 - "authentication/sessions#new"
 - "public#index"
