--- a/test/fixtures/incoming_payment_modes.yml
+++ b/test/fixtures/incoming_payment_modes.yml
@@ -65,11 +65,13 @@ incoming_payment_modes_001:
   cash_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  detail_payments: true
   id: 1
   name: "Lorem ipsum"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   with_accounting: true
+  with_deposit: true
 
 incoming_payment_modes_002:
   attorney_journal_id: 1
