--- a/test/fixtures/incoming_payment_modes.yml
+++ b/test/fixtures/incoming_payment_modes.yml
@@ -65,6 +65,8 @@ incoming_payment_modes_001:
   cash_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  depositables_account_id: 1
+  depositables_journal_id: 1
   detail_payments: true
   id: 1
   name: "Lorem ipsum"
