--- a/test/fixtures/product_localizations.yml
+++ b/test/fixtures/product_localizations.yml
@@ -56,6 +56,8 @@ product_localizations_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
+  arrival_cause: "other"
+  container_id: 28001
   nature: "interior"
   product_id: 1
   started_at: 2009-07-19 19:13:59 +02:00
@@ -70,6 +72,8 @@ product_localizations_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
+  arrival_cause: "other"
+  container_id: 28001
   nature: "transfer"
   product_id: 1
   started_at: 2009-07-19 19:13:59 +02:00
