--- a/config/rights.yml
+++ b/config/rights.yml
@@ -1,5 +1,4 @@
 # Unused actions in rights
-# - "authentication/sessions#_callback_before_11"
 # - "backend/accounts#unroll"
 # - "backend/activities#create"
 # - "backend/activities#destroy"
@@ -753,7 +752,7 @@ __minimum__:
 __public__:
 - "authentication/passwords#create"
 - "authentication/passwords#new"
-- "authentication/sessions#_callback_before_12" #?
+- "authentication/sessions#_callback_before_11"
 - "authentication/sessions#create"
 - "authentication/sessions#new"
 - "public#index"
@@ -761,9 +760,9 @@ __public__:
 # Make and reload backups
 backup_company:
 - "backend/dashboards#settings"
-- "backend/settings#backup"
-- "backend/settings#backups"
-- "backend/settings#restore"
+- "backend/settings#backup" #?
+- "backend/settings#backups" #?
+- "backend/settings#restore" #?
 
 # Transfer commercial data in accountancy
 bookkeep:
