Fixes a part of remaining bugs

--- a/test/fixtures/versions.yml
+++ b/test/fixtures/versions.yml
@@ -49,9 +49,9 @@ versions_001:
   creator_name: "Alice"
   event: "create"
   id: 1
-  item_changes: "---!ruby/hash:ActiveSupport::HashWithIndifferentAccess\n"
+  item_changes: <%= {}.with_indifferent_access.to_yaml.inspect %>
   item_id: 1
-  item_object: "---!ruby/hash:ActiveSupport::HashWithIndifferentAccess\n"
+  item_object: <%= {}.with_indifferent_access.to_yaml.inspect %>
   item_type: "Product"
 
 versions_002:
@@ -60,9 +60,9 @@ versions_002:
   creator_name: "Bob"
   event: "update"
   id: 2
-  item_changes: "---!ruby/hash:ActiveSupport::HashWithIndifferentAccess\n"
+  item_changes: <%= {}.with_indifferent_access.to_yaml.inspect %>
   item_id: 1
-  item_object: "---!ruby/hash:ActiveSupport::HashWithIndifferentAccess\n"
+  item_object: <%= {}.with_indifferent_access.to_yaml.inspect %>
   item_type: "Animal"
 
 versions_003:
@@ -71,8 +71,8 @@ versions_003:
   creator_name: "Charlene"
   event: "destroy"
   id: 3
-  item_changes: "---!ruby/hash:ActiveSupport::HashWithIndifferentAccess\n"
+  item_changes: <%= {}.with_indifferent_access.to_yaml.inspect %>
   item_id: 1
-  item_object: "---!ruby/hash:ActiveSupport::HashWithIndifferentAccess\n"
+  item_object: <%= {}.with_indifferent_access.to_yaml.inspect %>
   item_type: "Entity"
 
