Writes valid fixtures for interventions tests

--- a/test/fixtures/intervention_casts.yml
+++ b/test/fixtures/intervention_casts.yml
@@ -49,22 +49,79 @@
 #
 
 intervention_casts_001:
-  actor_id: equipments_001
+  actor_id: 16003
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
   intervention_id: 1
   reference_name: "grinder"
+  roles: "soil_enrichment-tool, grinding-tool"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
 intervention_casts_002:
-  actor_id: plants_003
+  actor_id: 5003
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
+  intervention_id: 2
+  reference_name: "grinded"
+  roles: 'grinding-output, soil_enrichment-input'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+intervention_casts_003:
+  actor_id: 10001
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 3
+  intervention_id: 1
+  reference_name: "cultivation"
+  roles: "grinding-input"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+intervention_casts_004:
+  actor_id: 16001
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 4
+  intervention_id: 1
+  reference_name: "tractor"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+intervention_casts_005:
+  actor_id: 5003
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 5
   intervention_id: 1
   reference_name: "grinded"
   roles: 'grinding-output, soil_enrichment-input'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  variant_id: 5
+
+intervention_casts_006:
+  actor_id: 32003
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 6
+  intervention_id: 1
+  reference_name: "land_parcel"
+  roles: 'soil_enrichment-target'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+intervention_casts_007:
+  actor_id: 21003
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 7
+  intervention_id: 1
+  reference_name: "driver"
+  roles: 'grinding-doer, soil_enrichment-doer'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
