--- a/test/fixtures/interventions.yml
+++ b/test/fixtures/interventions.yml
@@ -68,7 +68,7 @@ interventions_001:
   reference_name: ":plant_grinding-0.0"
   production_id: 1
   provisional: false
-  state: "done"
+  state: "undone"
   started_at: 2009-05-03 09:13:59 +02:00
   stopped_at: 2009-05-03 12:17:23 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
