--- a/test/fixtures/operations.yml
+++ b/test/fixtures/operations.yml
@@ -51,11 +51,12 @@
 operations_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  duration: 11000
   id: 1
-  intervention_id: 1
+  intervention_id: 2
   reference_name: '100'
-  started_at: 2009-07-19 19:13:59 +02:00
-  stopped_at: 2009-07-19 21:13:59 +02:00
+  started_at: 2009-05-03 09:13:59 +02:00
+  stopped_at: 2009-05-03 12:17:23 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -64,7 +65,7 @@ operations_002:
   creator_id: 1
   id: 2
   intervention_id: 2
-  reference_name: '100'
+  reference_name: '300'
   started_at: 2009-07-19 19:13:59 +02:00
   stopped_at: 2009-07-19 21:13:59 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -74,7 +75,7 @@ operations_003:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 3
-  intervention_id: 1
+  intervention_id: 2
   reference_name: '200'
   started_at: 2009-07-19 19:13:59 +02:00
   stopped_at: 2009-07-19 21:07:11 +02:00
