--- a/test/fixtures/product_nature_variants.yml
+++ b/test/fixtures/product_nature_variants.yml
@@ -113,6 +113,22 @@ product_nature_variants_004:
   updater_id: 1
   variety: "building"
 
+product_nature_variants_005:
+  active: true
+  category_id: 1
+  commercial_name: "Dry matter"
+  created_at: "2009-07-19 19:13:59 +02:00"
+  creator_id: 1
+  horizontal_rotation: 0
+  unit_name: "tas"
+  id: 5
+  nature_id: 1
+  nature_name: "Generic Product Type"
+  number: "PNV005"
+  updated_at: "2009-07-19 19:13:59 +02:00"
+  updater_id: 1
+  variety: "organic_matter"
+
 product_nature_variants_007:
   active: true
   category_id: 1
