--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -411,6 +411,20 @@ equipments_002:
   variant_id: 1
   variety: "equipment"
 
+equipments_003:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 16003
+  name: "Grinder"
+  nature_id: 1
+  number: "16003"
+  type: 'Equipment'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  variant_id: 1
+  variety: "equipment"
+
 # -----------------------------------------------------------------------------
 # { 4} Immatters
 
