--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ bundler_args: --without development doc
 rvm:
   - 1.9.3
   - 2.0.0
-before_install: test/ci/before_install
+  - 2.1.0
+befoe_install: test/ci/before_install
 before_script:  test/ci/before_script
-script: xvfb-run bundle exec rake test
+script: xvfb-run bundle exec rake test:run_all
 matrix:
   allow_failures:
     - rvm: 2.1.0
