--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
   - 1.9.3
   - 2.0.0
   - 2.1.0
-befoe_install: test/ci/before_install
+before_install: test/ci/before_install
 before_script:  test/ci/before_script
 script: xvfb-run bundle exec rake test:run_all
 matrix:
