update incidents with states

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -243,13 +243,16 @@
 # - "backend/gaps#update"
 # - "backend/incidents#create"
 # - "backend/incidents#destroy"
+# - "backend/incidents#drop"
 # - "backend/incidents#edit"
 # - "backend/incidents#index"
 # - "backend/incidents#list"
 # - "backend/incidents#list_interventions"
 # - "backend/incidents#new"
 # - "backend/incidents#picture"
+# - "backend/incidents#reopen"
 # - "backend/incidents#show"
+# - "backend/incidents#solve"
 # - "backend/incidents#unroll"
 # - "backend/incidents#update"
 # - "backend/incoming_deliveries#list_items"
