Renames Incident to Issue and cleans it

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -46,9 +46,9 @@
 # - "backend/animal_medicines#list_carrier_linkages"
 # - "backend/animal_medicines#list_contained_products"
 # - "backend/animal_medicines#list_groups"
-# - "backend/animal_medicines#list_incidents"
 # - "backend/animal_medicines#list_indicators"
 # - "backend/animal_medicines#list_intervention_casts"
+# - "backend/animal_medicines#list_issues"
 # - "backend/animal_medicines#list_markers"
 # - "backend/animal_medicines#list_measurements"
 # - "backend/animal_medicines#list_members"
@@ -68,9 +68,9 @@
 # - "backend/animals#list_children"
 # - "backend/animals#list_contained_products"
 # - "backend/animals#list_groups"
-# - "backend/animals#list_incidents"
 # - "backend/animals#list_indicators"
 # - "backend/animals#list_intervention_casts"
+# - "backend/animals#list_issues"
 # - "backend/animals#list_markers"
 # - "backend/animals#list_measurements"
 # - "backend/animals#list_members"
@@ -90,9 +90,9 @@
 # - "backend/building_divisions#list_carrier_linkages"
 # - "backend/building_divisions#list_contained_products"
 # - "backend/building_divisions#list_groups"
-# - "backend/building_divisions#list_incidents"
 # - "backend/building_divisions#list_indicators"
 # - "backend/building_divisions#list_intervention_casts"
+# - "backend/building_divisions#list_issues"
 # - "backend/building_divisions#list_markers"
 # - "backend/building_divisions#list_measurements"
 # - "backend/building_divisions#list_members"
@@ -107,9 +107,9 @@
 # - "backend/buildings#list_contained_products"
 # - "backend/buildings#list_divisions"
 # - "backend/buildings#list_groups"
-# - "backend/buildings#list_incidents"
 # - "backend/buildings#list_indicators"
 # - "backend/buildings#list_intervention_casts"
+# - "backend/buildings#list_issues"
 # - "backend/buildings#list_markers"
 # - "backend/buildings#list_measurements"
 # - "backend/buildings#list_members"
@@ -148,11 +148,11 @@
 # - "backend/cells/last_entities_cells#show"
 # - "backend/cells/last_events_cells#list"
 # - "backend/cells/last_events_cells#show"
-# - "backend/cells/last_incidents_cells#list"
-# - "backend/cells/last_incidents_cells#show"
 # - "backend/cells/last_incoming_deliveries_cells#list"
 # - "backend/cells/last_incoming_deliveries_cells#show"
 # - "backend/cells/last_interventions_cells#show"
+# - "backend/cells/last_issues_cells#list"
+# - "backend/cells/last_issues_cells#show"
 # - "backend/cells/last_milk_result_cells#list"
 # - "backend/cells/last_milk_result_cells#show"
 # - "backend/cells/last_outgoing_deliveries_cells#list"
@@ -174,9 +174,9 @@
 # - "backend/cultivable_zones#list_carrier_linkages"
 # - "backend/cultivable_zones#list_contained_products"
 # - "backend/cultivable_zones#list_groups"
-# - "backend/cultivable_zones#list_incidents"
 # - "backend/cultivable_zones#list_indicators"
 # - "backend/cultivable_zones#list_intervention_casts"
+# - "backend/cultivable_zones#list_issues"
 # - "backend/cultivable_zones#list_markers"
 # - "backend/cultivable_zones#list_measurements"
 # - "backend/cultivable_zones#list_members"
@@ -212,9 +212,9 @@
 # - "backend/equipments#list_carrier_linkages"
 # - "backend/equipments#list_contained_products"
 # - "backend/equipments#list_groups"
-# - "backend/equipments#list_incidents"
 # - "backend/equipments#list_indicators"
 # - "backend/equipments#list_intervention_casts"
+# - "backend/equipments#list_issues"
 # - "backend/equipments#list_markers"
 # - "backend/equipments#list_measurements"
 # - "backend/equipments#list_members"
@@ -241,20 +241,6 @@
 # - "backend/gaps#new"
 # - "backend/gaps#show"
 # - "backend/gaps#update"
-# - "backend/incidents#create"
-# - "backend/incidents#destroy"
-# - "backend/incidents#drop"
-# - "backend/incidents#edit"
-# - "backend/incidents#index"
-# - "backend/incidents#list"
-# - "backend/incidents#list_interventions"
-# - "backend/incidents#new"
-# - "backend/incidents#picture"
-# - "backend/incidents#reopen"
-# - "backend/incidents#show"
-# - "backend/incidents#solve"
-# - "backend/incidents#unroll"
-# - "backend/incidents#update"
 # - "backend/incoming_deliveries#list_items"
 # - "backend/incoming_deliveries#show"
 # - "backend/incoming_deliveries#unroll"
@@ -285,6 +271,20 @@
 # - "backend/interventions#unroll"
 # - "backend/interventions#update"
 # - "backend/inventories#unroll"
+# - "backend/issues#abort"
+# - "backend/issues#close"
+# - "backend/issues#create"
+# - "backend/issues#destroy"
+# - "backend/issues#edit"
+# - "backend/issues#index"
+# - "backend/issues#list"
+# - "backend/issues#list_interventions"
+# - "backend/issues#new"
+# - "backend/issues#picture"
+# - "backend/issues#reopen"
+# - "backend/issues#show"
+# - "backend/issues#unroll"
+# - "backend/issues#update"
 # - "backend/journal_entries#index"
 # - "backend/journal_entries#list"
 # - "backend/journal_entries#unroll"
@@ -301,9 +301,9 @@
 # - "backend/land_parcel_clusters#list_carrier_linkages"
 # - "backend/land_parcel_clusters#list_contained_products"
 # - "backend/land_parcel_clusters#list_groups"
-# - "backend/land_parcel_clusters#list_incidents"
 # - "backend/land_parcel_clusters#list_indicators"
 # - "backend/land_parcel_clusters#list_intervention_casts"
+# - "backend/land_parcel_clusters#list_issues"
 # - "backend/land_parcel_clusters#list_markers"
 # - "backend/land_parcel_clusters#list_measurements"
 # - "backend/land_parcel_clusters#list_members"
@@ -322,9 +322,9 @@
 # - "backend/land_parcel_groups#list_carrier_linkages"
 # - "backend/land_parcel_groups#list_contained_products"
 # - "backend/land_parcel_groups#list_groups"
-# - "backend/land_parcel_groups#list_incidents"
 # - "backend/land_parcel_groups#list_indicators"
 # - "backend/land_parcel_groups#list_intervention_casts"
+# - "backend/land_parcel_groups#list_issues"
 # - "backend/land_parcel_groups#list_markers"
 # - "backend/land_parcel_groups#list_measurements"
 # - "backend/land_parcel_groups#list_members"
@@ -338,9 +338,9 @@
 # - "backend/land_parcels#list_carrier_linkages"
 # - "backend/land_parcels#list_contained_products"
 # - "backend/land_parcels#list_groups"
-# - "backend/land_parcels#list_incidents"
 # - "backend/land_parcels#list_indicators"
 # - "backend/land_parcels#list_intervention_casts"
+# - "backend/land_parcels#list_issues"
 # - "backend/land_parcels#list_markers"
 # - "backend/land_parcels#list_measurements"
 # - "backend/land_parcels#list_members"
@@ -381,9 +381,9 @@
 # - "backend/matters#list_carrier_linkages"
 # - "backend/matters#list_contained_products"
 # - "backend/matters#list_groups"
-# - "backend/matters#list_incidents"
 # - "backend/matters#list_indicators"
 # - "backend/matters#list_intervention_casts"
+# - "backend/matters#list_issues"
 # - "backend/matters#list_markers"
 # - "backend/matters#list_measurements"
 # - "backend/matters#list_members"
@@ -402,9 +402,9 @@
 # - "backend/medicines#list_carrier_linkages"
 # - "backend/medicines#list_contained_products"
 # - "backend/medicines#list_groups"
-# - "backend/medicines#list_incidents"
 # - "backend/medicines#list_indicators"
 # - "backend/medicines#list_intervention_casts"
+# - "backend/medicines#list_issues"
 # - "backend/medicines#list_markers"
 # - "backend/medicines#list_measurements"
 # - "backend/medicines#list_members"
@@ -423,9 +423,9 @@
 # - "backend/mineral_matters#list_carrier_linkages"
 # - "backend/mineral_matters#list_contained_products"
 # - "backend/mineral_matters#list_groups"
-# - "backend/mineral_matters#list_incidents"
 # - "backend/mineral_matters#list_indicators"
 # - "backend/mineral_matters#list_intervention_casts"
+# - "backend/mineral_matters#list_issues"
 # - "backend/mineral_matters#list_markers"
 # - "backend/mineral_matters#list_measurements"
 # - "backend/mineral_matters#list_members"
@@ -444,9 +444,9 @@
 # - "backend/organic_matters#list_carrier_linkages"
 # - "backend/organic_matters#list_contained_products"
 # - "backend/organic_matters#list_groups"
-# - "backend/organic_matters#list_incidents"
 # - "backend/organic_matters#list_indicators"
 # - "backend/organic_matters#list_intervention_casts"
+# - "backend/organic_matters#list_issues"
 # - "backend/organic_matters#list_markers"
 # - "backend/organic_matters#list_measurements"
 # - "backend/organic_matters#list_members"
@@ -492,9 +492,9 @@
 # - "backend/plant_medicines#list_carrier_linkages"
 # - "backend/plant_medicines#list_contained_products"
 # - "backend/plant_medicines#list_groups"
-# - "backend/plant_medicines#list_incidents"
 # - "backend/plant_medicines#list_indicators"
 # - "backend/plant_medicines#list_intervention_casts"
+# - "backend/plant_medicines#list_issues"
 # - "backend/plant_medicines#list_markers"
 # - "backend/plant_medicines#list_measurements"
 # - "backend/plant_medicines#list_members"
@@ -513,9 +513,9 @@
 # - "backend/plants#list_carrier_linkages"
 # - "backend/plants#list_contained_products"
 # - "backend/plants#list_groups"
-# - "backend/plants#list_incidents"
 # - "backend/plants#list_indicators"
 # - "backend/plants#list_intervention_casts"
+# - "backend/plants#list_issues"
 # - "backend/plants#list_markers"
 # - "backend/plants#list_measurements"
 # - "backend/plants#list_members"
@@ -547,9 +547,9 @@
 # - "backend/product_groups#list_carrier_linkages"
 # - "backend/product_groups#list_contained_products"
 # - "backend/product_groups#list_groups"
-# - "backend/product_groups#list_incidents"
 # - "backend/product_groups#list_indicators"
 # - "backend/product_groups#list_intervention_casts"
+# - "backend/product_groups#list_issues"
 # - "backend/product_groups#list_markers"
 # - "backend/product_groups#list_measurements"
 # - "backend/product_groups#list_members"
@@ -647,9 +647,9 @@
 # - "backend/products#list_carrier_linkages"
 # - "backend/products#list_contained_products"
 # - "backend/products#list_groups"
-# - "backend/products#list_incidents"
 # - "backend/products#list_indicators"
 # - "backend/products#list_intervention_casts"
+# - "backend/products#list_issues"
 # - "backend/products#list_markers"
 # - "backend/products#list_measurements"
 # - "backend/products#list_members"
@@ -676,9 +676,9 @@
 # - "backend/settlements#list_carrier_linkages"
 # - "backend/settlements#list_contained_products"
 # - "backend/settlements#list_groups"
-# - "backend/settlements#list_incidents"
 # - "backend/settlements#list_indicators"
 # - "backend/settlements#list_intervention_casts"
+# - "backend/settlements#list_issues"
 # - "backend/settlements#list_markers"
 # - "backend/settlements#list_measurements"
 # - "backend/settlements#list_members"
@@ -705,9 +705,9 @@
 # - "backend/workers#list_carrier_linkages"
 # - "backend/workers#list_contained_products"
 # - "backend/workers#list_groups"
-# - "backend/workers#list_incidents"
 # - "backend/workers#list_indicators"
 # - "backend/workers#list_intervention_casts"
+# - "backend/workers#list_issues"
 # - "backend/workers#list_markers"
 # - "backend/workers#list_measurements"
 # - "backend/workers#list_members"
