--- a/test/fixtures/issues.yml
+++ b/test/fixtures/issues.yml
@@ -19,7 +19,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: incidents
+# == Table: issues
 #
 #  created_at           :datetime         not null
 #  creator_id           :integer
@@ -42,9 +42,9 @@
 #  updater_id           :integer
 #
 #
-# == Fixture: incidents
+# == Fixture: issues
 #
-# incidents_001:
+# issues_001:
 #   created_at: 2013-10-26 18:34:04 +02:00
 #   creator_id: 1
 #   id: 1
@@ -57,7 +57,7 @@
 #   updater_id: 1
 #
 
-incidents_001:
+issues_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
@@ -72,7 +72,7 @@ incidents_001:
   updater_id: 1
 
 
-incidents_002:
+issues_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
