--- a/test/fixtures/product_indicator_data.yml
+++ b/test/fixtures/product_indicator_data.yml
@@ -149,3 +149,51 @@ product_indicator_data_007:
   product_id: 30003
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+
+product_indicator_data_008:
+  choice_value: "female"
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 8
+  indicator_name: "sex"
+  indicator_datatype: "choice"
+  measured_at: 0001-01-19 19:13:59 +02:00
+  product_id: 7004
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+product_indicator_data_009:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  decimal_value: 1
+  id: 9
+  indicator_name: "population"
+  indicator_datatype: "decimal"
+  measured_at: 0001-01-19 19:13:59 +02:00
+  product_id: 7004
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+product_indicator_data_010:
+  choice_value: "female"
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 10
+  indicator_name: "sex"
+  indicator_datatype: "choice"
+  measured_at: 0001-01-19 19:13:59 +02:00
+  product_id: 7002
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+product_indicator_data_011:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  decimal_value: 1
+  id: 11
+  indicator_name: "population"
+  indicator_datatype: "decimal"
+  measured_at: 0001-01-19 19:13:59 +02:00
+  product_id: 7002
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
