--- a/test/fixtures/product_nature_variant_indicator_data.yml
+++ b/test/fixtures/product_nature_variant_indicator_data.yml
@@ -80,3 +80,26 @@ product_nature_variant_indicator_data_002:
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   variant_id: 1
+
+product_nature_variant_indicator_data_003:
+  choice_value: "female"
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 3
+  indicator_name: "sex"
+  indicator_datatype: "choice"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  variant_id: 7
+
+product_nature_variant_indicator_data_004:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  decimal_value: 1
+  id: 4
+  indicator_name: "population"
+  indicator_datatype: "decimal"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  variant_id: 7
+
