--- a/test/fixtures/product_natures.yml
+++ b/test/fixtures/product_natures.yml
@@ -119,6 +119,22 @@ product_natures_004:
   updater_id: 1
   variety: "building"
 
+product_natures_005:
+  active: true
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  derivatives_list: "meat, milk"
+  id: 5
+  frozen_indicators_list: "sex, population"
+  population_counting: "unitary"
+  name: "Female cow"
+  number: "FEMCOW"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  variable_indicators_list: ""
+  variety: "bos"
+
 product_natures_029:
   active: true
   category_id: 1
