--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - "gem update --system 1.3.7"
   # - "rvm @global do gem uninstall -ax rubygems-bundler"
   - "gem install rake -v=0.9.6 --no-ri --no-rdoc"
-  - "gem install pg mysql sqlite3 --no-ri --no-rdoc"
+  - "gem install pg mysql sqlite3 rmagick --no-ri --no-rdoc"
   - "gem install rails -v=2.3.2 --no-ri --no-rdoc"
   - "rake _0.9.6_ gems:install --trace"
   - "rake _0.9.6_ db:migrate"
