--- a/test/fixtures/issues.yml
+++ b/test/fixtures/issues.yml
@@ -65,7 +65,7 @@ issues_001:
   nature: "mammite"
   observed_at: 2009-07-19 19:13:59 +02:00
   priority: 2
-  state: "new"
+  state: "opened"
   target_id: 7001
   target_type: "Animal"
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -80,7 +80,7 @@ issues_002:
   nature: "mammite"
   observed_at: 2009-07-19 19:13:59 +02:00
   priority: 2
-  state: "new"
+  state: "opened"
   target_id: 7001
   target_type: "Animal"
   updated_at: 2009-07-19 19:13:59 +02:00
