--- a/config/rights.yml
+++ b/config/rights.yml
@@ -159,6 +159,10 @@
 # - "backend/cells/last_outgoing_deliveries_cells#show"
 # - "backend/cells/last_products_cells#list"
 # - "backend/cells/last_products_cells#show"
+# - "backend/cells/last_purchases_cells#list"
+# - "backend/cells/last_purchases_cells#show"
+# - "backend/cells/last_sales_cells#list"
+# - "backend/cells/last_sales_cells#show"
 # - "backend/cells/map_cells#show"
 # - "backend/cells/map_cells#update"
 # - "backend/cells/meteo_cells#show"
