--- a/db/tables.yml
+++ b/db/tables.yml
@@ -61,6 +61,7 @@ affairs:
   creator_id: {type: integer, references: user}
   credit: {type: decimal, precision: 19, scale: 4, required: true, default: 0.0}
   currency: {type: string, limit: 3, required: true}
+  deals_count: {type: integer, required: true, default: 0}
   debit: {type: decimal, precision: 19, scale: 4, required: true, default: 0.0}
   id: {type: integer, required: true}
   journal_entry_id: {type: integer, references: journal_entry}
